# AndroidNative

./: .clang-format  .gitignore  README.md  xmake.lua
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/lai001/androidnative/: MainActivity.java  Native.java
app/src/main/res/values/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
native/cpp/include/: AndroidNative.h
native/cpp/include/IO/: InputStream.h
native/cpp/src/: InputStream.cpp
